# mangage-center

./: .gitignore  README.md
Carve_Control_Service/: Carve_Control_Service.sln  main.cpp
Carve_Control_Service/Carve_Control_Service/: Carve_Control_Service.aps  ReadMe.txt  (+9 more)
Carve_Control_Service/source/: CBaoyuan_Lib_Tool.cpp  CBaoyuan_Lib_Tool.h  CCarve.cpp  CCarve.h  CDevice.cpp  CDevice.h  CMakeLists.txt  CSpdLog.h  Carve_Control_Service.cpp  busin_log.h  carve_common_lib.cpp  carve_common_lib.h  carve_manager.cpp  carve_manager.h  log_base.cpp  log_base.h
Carve_Control_Service/source/http_server/: connection.cpp  connection.hpp  deal_http_msg.cpp  deal_http_msg.h  header.hpp  http_parser.c  http_parser.h  http_settings.cpp  http_settings.h  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  singleton_server.cpp  singleton_server.h
Carve_Control_Service/source/lib_json/: Makefile  json_reader.cpp  json_value.cpp  json_writer.cpp  lib_json.vcxproj
Carve_Control_Service/source/lib_json/json/json/: json.h  json.m
Carve_Control_Service/source/lib_json/json/json.xcodeproj/: project.pbxproj
Carve_Control_Service/source/lib_json/json/json.xcodeproj/project.xcworkspace/xcuserdata/weifengli.xcuserdatad/: UserInterfaceState.xcuserstate
Carve_Control_Service/source/lib_json/json/json.xcodeproj/xcuserdata/weifengli.xcuserdatad/xcschemes/: json.xcscheme  xcschememanagement.plist
FileEncrypt/: FileEncrypt.sln
UpgradeProgram/: UpgradeProgram.sln
(+94 files in other folders)
